[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-teamized"
description = "Ein Tool für Zeitmanagement und Projektplanung"
readme = "README.md"
authors = [{ name = "Rafael Urben", email = "github@rafaelurben.ch" }]
maintainers = [{ name = "Rafael Urben", email = "github@rafaelurben.ch" }]
license-files = ["LICENSE"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">= 3.12"
dependencies = ["Django>=5.2"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black==26.3.1",
    "pylint==4.0.5",
    "pylint-django==2.7.0",
    "django-debug-toolbar==6.3.0",
    "coverage==7.14.0",
]

[project.urls]
Homepage = "https://github.com/rafaelurben/django-teamized"
Docs = "https://github.com/rafaelurben/django-teamized#readme"
GitHub = "https://github.com/rafaelurben/django-teamized"
Issues = "https://github.com/rafaelurben/django-teamized/issues"
Funding = "https://github.com/sponsors/rafaelurben"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["teamized*"]

[tool.setuptools.dynamic]
version = { file = ["_version.txt"] }

[tool.black]
line-length = 100
target-version = ['py312', 'py313', 'py314']
include = '\.pyi?$'

[tool.pylint.main]
ignore = ["migrations", "node_modules", ".venv"]
disable= [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "django-not-configured",
    "line-too-long",
    "too-many-ancestors",
    "too-many-lines",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-few-public-methods",
    "consider-using-from-import",
    "cyclic-import",
]
load-plugins = ["pylint_django"]

[tool.pylint.reports]
min-similarity-lines = 10
