[metadata]
name = django-teamized
version = file: _version.txt
description = Ein Tool für Zeitmanagement und Projektplanung
long_description = file: README.md
long_description_content_type = text/markdown
author = Rafael Urben
author_email = github@rafaelurben.ch
maintainer = Rafael Urben
maintainer_email = github@rafaelurben.ch
license = GNU General Public License v3 (GPLv3)
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
url = https://github.com/rafaelurben/django-teamized
project_urls =
    Docs = https://github.com/rafaelurben/django-teamized#readme
    GitHub = https://github.com/rafaelurben/django-teamized
    Issues = https://github.com/rafaelurben/django-teamized/issues
    Funding = https://github.com/sponsors/rafaelurben

[options]
setup_requires =
    setuptools
install_requires =
    Django>=4.2
python_requires = >= 3.10
include_package_data = true
packages = find:
